--- a/SalesEdge/zh-Hant.lproj/InfoPlist.strings
+++ b/SalesEdge/zh-Hant.lproj/InfoPlist.strings
@@ -5,6 +5,4 @@
   Created by Bin Guo on 2018/3/24.
   Copyright © 2018年 Bin Guo. All rights reserved.
 */
-
-"CFBundleDisplayName" = "销售优势";
-
+"CFBundleDisplayName" = "Sales Edge";
