--- a/SalesEdge/zh-Hant.lproj/InfoPlist.strings
+++ b/SalesEdge/zh-Hant.lproj/InfoPlist.strings
@@ -5,4 +5,6 @@
   Created by Bin Guo on 2018/3/24.
   Copyright © 2018年 Bin Guo. All rights reserved.
 */
-"CFBundleDisplayName" = "Sales Edge";
+"CFBundleDisplayName" = "銷售優勢";
+
+
