--- a/SalesEdge/en.lproj/Localizable.strings
+++ b/SalesEdge/en.lproj/Localizable.strings
@@ -5,3 +5,21 @@
   Created by Bin Guo on 2018/3/24.
   Copyright © 2018年 Bin Guo. All rights reserved.
 */
+"Change Group" = "Change Group";
+"My List" = "My List";
+"Received" = "Received";
+"Customer" = "Customer";
+"Wish List" = "Wish List";
+"My" = "My";
+"MyID" = "MyID";
+"Download sample group" = "Download sample group";
+"Remove all" = "Remove all";
+"Are you sure to remove all?" = "Are you sure to remove all?";
+"Cancel" = "Cancel";
+"Choose Option" = "Choose Option";
+"Scan QRCode" = "Scan QRCode";
+"OK" = "OK";
+"Input" = "Input";
+"Product No." = "Product No.";
+"Delete" = "Delete";
+"No image" = "No image";
